Custom user model

--- a/.env-sample
+++ b/.env-sample
@@ -1,8 +1,8 @@
-# SECRET_KEY=
-# DEBUG = 
+SECRET_KEY=
+DEBUG = 
 
-# # DB configarations
-# DB_NAME=
-# DB_USER=
-# DB_PASSWORD=
-# DB_HOST=
+# DB configarations
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
